Push data to Snowflake + snowflake properties + snowflake item writer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.h2.console.enabled=true
 spring.batch.jdbc.initialize-schema=always
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
+
+snowflake.url=
+snowflake.user=
+snowflake.password=
+snowflake.database=
+snowflake.schema=
+snowflake.warehouse=
+snowflake.role=
+snowflake.table=
